--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.coherentlogic.coherent.data-model</groupId>
     <artifactId>bom</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.27-RELEASE</version>
+    <version>1.0.28-RELEASE</version>
 
     <name>Coherent Data Model Bill of Materials</name>
     <description>The bill of materials (bom) for the CL Data Model.</description>
@@ -40,10 +40,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.3.3.RELEASE</spring.version>
-        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
-        <aspectj.version>1.8.9</aspectj.version>
-        <hibernate.version>5.2.2.Final</hibernate.version>
+        <spring.version>4.3.4.RELEASE</spring.version>
+        <spring.boot.version>1.4.2.RELEASE</spring.boot.version>
+        <aspectj.version>1.8.10</aspectj.version>
+        <hibernate.version>5.2.5.Final</hibernate.version>
     </properties>
     <licenses>
         <license>
@@ -86,6 +86,11 @@
             </dependency>
             <dependency>
                 <groupId>com.coherentlogic.coherent.data-model</groupId>
+                <artifactId>xstream-int</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.coherentlogic.coherent.data-model</groupId>
                 <artifactId>data-adapter-application</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -105,7 +110,7 @@
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
-            </exclusions>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -141,7 +146,7 @@
             <dependency>
                 <groupId>org.springframework.ws</groupId>
                 <artifactId>spring-ws-core</artifactId>
-                <version>2.3.0.RELEASE</version>
+                <version>2.4.0.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -166,7 +171,7 @@
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-client</artifactId>
-                <version>3.0.19.Final</version>
+                <version>3.1.0.Final</version>
                 <exclusions>
                     <!-- RESTEasy ships with jboss-logging version 3.1.4.GA and this causes problems with the
                          spring-boot-starter-data-jpa dependency, which ships with version 3.3.0.Final, which we
@@ -188,7 +193,7 @@
             <dependency>
                 <groupId>org.infinispan</groupId>
                 <artifactId>infinispan-core</artifactId>
-                <version>8.2.4.Final</version>
+                <version>8.2.5.Final</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
@@ -198,7 +203,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.4</version>
+                <version>3.5</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
@@ -208,12 +213,12 @@
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
-                <version>1.9.2</version>
+                <version>1.9.3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.6.2</version>
+                <version>2.7</version>
             </dependency>
 
             <!-- DEPRECATED AS NOT CURRENTLY BEING USED. -->
@@ -232,13 +237,13 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.21</version>
+                <version>1.7.22</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.21</version>
+                <version>1.7.22</version>
             </dependency>
 
             <dependency>
@@ -267,13 +272,13 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-tools</artifactId>
-                <version>5.0.2.Final</version>
+                <version>5.2.0.Final</version>
             </dependency>
 
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.4.192</version>
+                <version>1.4.193</version>
             </dependency>
 
             <dependency>
