--- a/data-model-core/pom.xml
+++ b/data-model-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.coherentlogic.coherent</groupId>
         <artifactId>data-model</artifactId>
-        <version>1.0.27-RELEASE</version>
+        <version>1.0.28-RELEASE</version>
     </parent>
 
     <groupId>com.coherentlogic.coherent.data-model</groupId>
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <name>data-model-core</name>
-    <url>http://sourceforge.net/projects/cldatamodel/</url>
+    <url>https://bitbucket.org/CoherentLogic/coherent-logic-enterprise-data-adapter</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,10 +35,10 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
          </dependency>
-        <dependency>
+        <!-- dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-         </dependency>
+         </dependency -->
          <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
